# ChangeLog for media-video/oxine
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/oxine/ChangeLog,v 1.31 2008/04/13 21:24:38 aballier Exp $

  13 Apr 2008; Alexis Ballier <aballier@gentoo.org> -oxine-0.6.6.ebuild:
  remove unused version

  10 Apr 2008; Samuli Suominen <drac@gentoo.org> oxine-0.6.3-r1.ebuild,
  oxine-0.6.6.ebuild, oxine-0.7.1.ebuild:
  Missing pkgconfig dep wrt #216907.

*oxine-0.7.1 (11 Jan 2008)

  11 Jan 2008; Steve Dibb <beandog@gentoo.org> +oxine-0.7.1.ebuild:
  Version bump, bug 202145

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> oxine-0.6.3-r1.ebuild,
  oxine-0.6.6.ebuild:
  Fixed quoting.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; oxine-0.5.ebuild,
  oxine-0.6.3-r1.ebuild, oxine-0.6.6.ebuild:
  Drop virtual/x11 references.

*oxine-0.6.6 (24 Mar 2007)

  24 Mar 2007; Steve Dibb <beandog@gentoo.org> +oxine-0.6.6.ebuild:
  Version bump

  04 Feb 2007; nixnut <nixnut@gentoo.org> oxine-0.6.3-r1.ebuild:
  Stable on wrt bug 164851

  03 Feb 2007; Peter Weller (welp) <welp@gentoo.org> oxine-0.6.3-r1.ebuild:
  Stable on amd64 wrt #164851

  02 Feb 2007; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  x86 stable wrt bug 164851

*oxine-0.6.3-r1 (21 Dec 2006)

  21 Dec 2006; Steve Dibb <beandog@gentoo.org> +oxine-0.6.3-r1.ebuild:
  Move joystick use flags around, fix nls build, bug 157064

  21 Dec 2006; Steve Dibb <beandog@gentoo.org> oxine-0.5.ebuild,
  oxine-0.6.3.ebuild:
  Remove dvb check for v4l on xine-lib

  06 Dec 2006; Steve Dibb <beandog@gentoo.org> oxine-0.6.3.ebuild:
  Fix keywords

*oxine-0.6.3 (02 Dec 2006)

  02 Dec 2006; Steve Dibb <beandog@gentoo.org> +oxine-0.6.3.ebuild:
  version bump, bug 156443

  27 Oct 2006; Steve Dibb <beandog@gentoo.org> oxine-0.5.ebuild:
  Fix eject dep; bug 153081

  17 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -files/oxine-0.2-gcc34.patch, -files/oxine-0.2-xtst.patch,
  -oxine-0.2.ebuild: