@@ -4,14 +4,14 @@ Hash: SHA1
 DIST oxine-0.6.tar.gz 8336102 RMD160 8d9ba313cbb24d8f2011d58035ca87da41df4982 SHA1 f59572c9152d53c359f1ee9024496835b117770c SHA256 3c02716dcaecf98e518aaf8b04f16d387c73bcf1aa21f71f60684f1a7e5956d2
 DIST oxine-0.7.1.tar.gz 3653511 RMD160 503e9134e4a87cb7c066319bb323c958293b85be SHA1 fa81f1380f94bfbd1cc0bb648b8ff8c4e77aa6ee SHA256 bfe9e4f49996234eabf788397969c90901197b2b1823cdb9a61e529f5c0f6a7d
 DIST oxine-0_6_0-to-0_6_3.patch 603146 RMD160 95fe1124bd070a4330534dc2742a05cb8deff062 SHA1 88234f73298c97cd1dc0026bcc6212bc7460b207 SHA256 32531361b3ec6579e598259ab90cf9f685491fbee7be735c17e3db10d8e88816
-EBUILD oxine-0.6.3-r1.ebuild 3362 RMD160 b8f2811c11b3ae037aaf6778b90d8b862071daa2 SHA1 5aff9d3dbf69ed6d29229fe27a4a730860f3d57d SHA256 86d51b6fb4ae488bd8c3cab05bac0d84937f9a3f4452ea362d697adf118a5a01
-EBUILD oxine-0.7.1.ebuild 3109 RMD160 c92f932e56810d2009de7aac65378977ef3a8ce5 SHA1 62df273477afc63d285bbc43bcf47396fa9f7787 SHA256 beba3c6f73fc36d3c418d645e7c895525b8d5d061a686a8d329143092f44468c
-MISC ChangeLog 3792 RMD160 0d61c983520581c70750be819611db2e0925107a SHA1 96a64ef5c9b4fcda849c2e77114b33c7c891290c SHA256 ef712e6677f638a021802c4f64d5a615ce16a0925745c2140105f7733088306c
+EBUILD oxine-0.6.3-r1.ebuild 3388 RMD160 e12d3e2444963d52b4707433929f972bedd88aa6 SHA1 58674dc0b58b1361213abf0d5b59ecb80a85bdf8 SHA256 dc9367e13cfa942fde19ef68cc7779aa4decfada82225c61dc10655da7d497b0
+EBUILD oxine-0.7.1.ebuild 3153 RMD160 e86751264c924f4de00ba8a93ad271d7d1d01b6e SHA1 651ba948f247260e7ac77bc3e73c1857f1096ea9 SHA256 084374b9cd43ae2ae41323503922cf7d5845ba5f71763c3e4a7ee92435fa98b7
+MISC ChangeLog 3935 RMD160 80c9ddfb02bc90c7e0562e176baf4ed0103dbe2d SHA1 4cf6eae0818e425d40e13e76461a74ae74c537b7 SHA256 873bfa8936a7987545937279d4acd66ff222297f0dd3eb1bee7ed6818cc3bb6c
 MISC metadata.xml 223 RMD160 86b42c49b694db39ddb3fdc60b98a3ad1a0c3392 SHA1 ea8c387229caaf4b0d3c9fbef9143b70dcae0b0d SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkgCeh0ACgkQvFcC4BYPU0oHAACgsZzLQSxMGsWQY5i7ygSd71n6
-jzkAnjn4D8PqlM4NAC76D94IOEk4YtRJ
-=dScj
+iEYEARECAAYFAkgCesoACgkQvFcC4BYPU0qG5QCgucMlCDF7AQmIJqHRvyIffGSh
+f9MAoMectJfGBQzxNIAkJNIh4DzuJi9A
+=u2Yv
 -----END PGP SIGNATURE-----
