@@ -1,6 +1,10 @@
 # ChangeLog for media-video/oxine
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/oxine/ChangeLog,v 1.31 2008/04/13 21:24:38 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/oxine/ChangeLog,v 1.32 2008/04/13 21:27:30 aballier Exp $
+
+  13 Apr 2008; Alexis Ballier <aballier@gentoo.org> oxine-0.6.3-r1.ebuild,
+  oxine-0.7.1.ebuild:
+  pkgconfig is only a build dep, bug #217278
 
   13 Apr 2008; Alexis Ballier <aballier@gentoo.org> -oxine-0.6.6.ebuild:
   remove unused version
